# claimflow-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  ingestion.py  main.py  models.py  schemas.py  seed.py  services.py  workflow.py
app/agents/: __init__.py  medication_intelligence_agent.py  patient_context_agent.py  procedure_history_agent.py  retrieval_agent.py  summary_agent.py  timeline_agent.py  utilization_agent.py
app/observability/: __init__.py  metrics.py  tracing.py
app/prompts/: summary_prompt.txt
app/services/: __init__.py  medication_service.py  patient_service.py  procedure_service.py  summary_service.py  timeline_service.py  utilization_service.py
app/static/: index.html
app/vector_store/: __init__.py  embeddings.py  retriever.py
data/knowledge/: README.md
tests/: conftest.py  test_api.py  test_ingestion.py
