[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claimflow-ai"
version = "1.0.0"
description = "Agentic healthcare intelligence over synthetic Synthea EHR data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "sqlalchemy>=2.0,<3",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.5,<3",
  "python-multipart>=0.0.12,<1",
  "openai>=1.55,<3",
  "langgraph>=0.2,<2",
  "pgvector>=0.3,<1",
  "prometheus-client>=0.21,<1",
  "python-json-logger>=3,<4",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.8,<1",
]

[project.scripts]
claimflow-load = "app.ingestion:main"
claimflow-seed = "app.seed:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["static/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
